--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,8 @@
 	<a href="{{ link | prepend: site.baseurl | prepend: site.url }}">
 		<img src="{{ site.logo_url }}" class="logo-avatar">
 	</a>
+	<h2>Ahmet Can Bilici</h2>
+	<h3>software developer </h3>
 	<span class="logo-prompt code">{{ prompt }}</span>
 
 </aside>
